another attempt on flask

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
        " <h3>Valles Marineris Hemisphere Enhanced</h3>]"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,13 +507,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "hemisphere_image_urls = []\n",
     "\n",
-    "for i in lin:\n",
+    "for i in range(len(links)):\n",
     "    hemi_dict ={}\n",
     "    browser.find_by_tag('h3')[i].click()\n",
     "    time.sleep(1)\n",
